# Disassembler

./: .dockerignore  .gitignore  CMakeLists.txt  CMakelists.txt  Dockerfile  LICENSE  README.md  capstoneDisassembler.h  depsCache.json  disassemble.cpp  disassemble.h  main.cpp
.github/codeql/: codeql-config.yml
.github/workflows/: build_cmake.yml  clang-format.yml  cmake-debug.yml  cmake-publish.yml  cmake-release.yml  cmake.yml  codeql-analysis.yml  license-check.yml  licenseCheck.yml
configs/: diffConfig.json  diffConfig2.json  linuxBinaryConfig.json  linuxXedBinaryConfig.json  linuxXedRawConfig.json  macBinaryConfig.json  macDiffConfig.json  macXedBinaryConfig.json  macXedDiffConfig.json  macXedLinuxBinaryConfig.json  macXedRawConfig.json  rawConfig.json  tempTest.sh  templateConfig.json  winBinaryConfig.json  winGCCBinaryConfig.json  winLinkBinaryConfig.json  winLinkdiffConfig.json  windiffConfig.json
int-tests/: CMakeLists.txt
int-tests/linux/: CMakeLists.txt
int-tests/mac/: CMakeLists.txt
int-tests/windows/: CMakeLists.txt
int-tests/windows/gcc/: CMakeLists.txt
int-tests/windows/ld/: CMakeLists.txt
int-tests/windows/link/: CMakeLists.txt
int-tests/windows/link/masm32/: CMakeLists.txt  hello.asm
int-tests/windows/link/masm64/: CMakeLists.txt  hello.asm
int-tests/windows/link/nasm/: CMakeLists.txt  main.asm
int-tests/windows/mingw/gcc/: CMakeLists.txt
int-tests/windows/mingw/ld/: CMakeLists.txt  hello.win.asm
plugins/: CMakeLists.txt  dllmain.cpp
plugins/xedPlugin/: CMakeLists.txt  xedDisassembler.cpp  xedDisassembler.h  xedLibInterface.cpp
plugins/xedPlugin/test/: CMakeLists.txt  test.cpp
scripts/: buildXED.ps1  buildXED.sh  clang-format.sh  elfLinuxBuildAndRun.sh  elfMacCrossBuild.sh  fetchpintool.sh  license-add.sh  license-check.sh  mach-oMacBuildAndRun.sh  moveFiles.ps1  renameDir.ps1  renameDir.sh  runGcov.sh  runXEDTest.sh  setupXED.ps1  setupXED.sh
src/: CMakeLists.txt  capstoneDisassembler.cpp  capstoneDisassembler.h  disassemble.cpp  disassemble.h  dynamicDisassembler.cpp  dynamicDisassembler.h  parser.cpp  parser.h
src/cli/: CMakeLists.txt  abstractcli.h  autocli.cpp  autocli.h  basecli.h  binaryDisassemble.cpp  binaryDisassemble.h  binaryfilecli.cpp  binaryfilecli.h  configcli.cpp  configcli.h  defaultcli.cpp  defaultcli.h  diffDisassemble.cpp  diffDisassemble.h  main.cpp  rawDisassemble.cpp  rawDisassemble.h  rawcli.cpp  rawcli.h  replcli.cpp  replcli.h
src/dataPattern/: CMakeLists.txt  singleton.cpp  singleton.h  singletonMgr.cpp  singletonMgr.h
src/diff/: CMakeLists.txt  diff.cpp  diff.h  difftool.cpp  difftool.h
src/gui/: CMakeLists.txt  glfwWindow.cpp  glfwWindow.h  imguiGLWindow.cpp  imguiGLWindow.h  main.cpp  window.cpp  window.h
src/interfaces/: helpers.h  instruction.h  interfaceDisassembler.h  jsonHelper.cpp  jsonHelper.h  libInterface.h  pch.h  types.h
src/pluginInfra/: CMakeLists.txt  abstractOSFactory.cpp  abstractOSFactory.h  dynamicLibMgr.cpp  dynamicLibMgr.h  linuxFactory.cpp  linuxFactory.h  macFactory.cpp  macFactory.h  windowsFactory.cpp  windowsFactory.h
src/repl/: CMakeLists.txt  repl.cpp  repl.h  replCurses.cpp  replCurses.h  replTypes.h
src/runtime/: CMakeLists.txt  ansiConsole.h  ansiWindows.cpp  binaryDisassemble.cpp  binaryDisassemble.h  internalData.h  rawDisassemble.cpp  rawDisassemble.h  runtime.cpp  runtime.h
src/test/: CMakeLists.txt  hello.linux.asm  hello.macos.asm  test.cpp
src/version/: AppName.txt  CMakeLists.txt  CMakeListsVersion.cmake  version.cpp.in  version.h
